--- a/Task1/index.html
+++ b/Task1/index.html
@@ -7,7 +7,7 @@
 <body>
 	<script type="text/javascript" src="js/task1.js"></script>
 	<script>
-		var age = prompt('Сколько Вам лет?'),
+		var age = prompt('Сколько Вам лет?', 0),
 		
 			ageCategory = age_category(age);
 			
