--- a/TestingSystem/index.html
+++ b/TestingSystem/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>BIGsoft. JS&amp;Ajax - Testing System &copy;</title>
 	<meta charset="UTF-8">
+	<!-- <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">-->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style type="text/css">
 		.caption {
 			color: green;
@@ -32,25 +34,63 @@
 		}
 	</style>
 </head>
-<body ng-controller="TestingController as Testing">
-	<h1 class="caption">Testing JavaScript!</h1>
+<body ng-controller="TestingController as Test">
+	<h1 class="caption">{{test.caption}} <span style="font-size: 14px; color: silver;">from {{test.author}}</span></h1>
 	<div class="question-sections">
-		<div class="question-section" ng-repeat="question in Testing.questions">
+		<div class="question-section" ng-controller="TestController as currTest" ng-repeat="(title, chapter) in test.chapters">
 			<p class="title">
-				<a href="#">{{question.section}}</a>
+				<a href="#">{{title}}</a>
+				<span style="font-size: 21px; color: silver;" ng-show="isCompleted(title)">{{result}}/{{chapter.questions.length}}</span>
+				<div class="control-panel" style="display: inline-block;" ng-show="chapter.available">
+					<a href="#" ng-hide="hasMinimumStability()" ng-click="beginTest(title)">Начать</a>
+					<a href="#" ng-show="hasBegun(title) && !isCompleted(title)" ng-click="continueTest(title)">Продолжить</a>
+					<a href="#" ng-show="isCompleted(title)" ng-click="testResult()">Результаты</a>
+				</div>
 			</p>
+			<div id="test-form" ng-show="hasBegun(title) && !isCompleted(title)" style="border: 1px solid green;">
+				<div class="current question">
+					{{getQuestion(cqIdx).title}}
+					<ul ng-controller="AnswersController">
+						<li ng-repeat="(i, answer) in getQuestion(cqIdx).answers">
+							<input type="radio" name="answers" ng-click="setAnswer(title, cqIdx, i)"> {{answer.answer}}
+						</li>
+					</ul>
+				</div>
+				<button ng-click="applyAnswer()">Apply! Next>></button> <a href="#" ng-click="quitTest()">Quit</a>
+			</div>
+			<!--
+			<modal title="{{question.section}}" visible="showModal">
+				<h2 ng-model="currQuest">{{currQuest.question}}</h2>
+				<hr/>
+				<ul>
+					<li ng-repeat="answer in currQuest.answers" ng-switch="isArray(currQuest.rightAnswer)">
+						<input type="checkbox" ng-switch-when="{{true}}"/>{{answer}}
+						<input type="radio" ng-switch-when="{{false}}"/>{{answer}}
+						<input type="radio" ng-switch-default/>{{answer}}
+					</li>
+				</ul>
+			</modal>
+			-->
+			<!--
 			<div class="questions">
 				<ul>
-					<li ng-repeat="quest in question.questions">
-						{{quest.question}}
+					<li>
+						//...
 					</li>
 				</ul>
 			</div>
-			<span class="total">8/10</span>
+			-->
+			<!-- <span class="total">8/10</span>-->
 		</div>
 	</div>
 	<!-- <button>Continue...</button>-->
-	<script type="text/javascript" src="js/angular.min.js"></script>
+	<script type="text/javascript" src="js/libs/angular.min.js"></script>
+	<script type="text/javascript" src="js//libs/jquery.min.js"></script>
+	<script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
+	<!-- <script type="text/javascript" src="js/libs/ui-bootstrap.tpls.min.js"></script>-->
 	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript">
+		//alert(app);
+	</script>
 </body>
 </html>
