The Controllers & Filters has been separated into different files.

--- a/TestingSystem/index.html
+++ b/TestingSystem/index.html
@@ -3,68 +3,12 @@
 <head>
 	<title>BIGsoft. JS&amp;Ajax - Testing System &copy;</title>
 	<meta charset="UTF-8">
-	<!-- <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">-->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<style type="text/css">
-		.caption {
-			color: green;
-		}
-		.question-sections {
-			border: 1px solid blue;
-			display: inline-block;
-		}
-		.question-section {
-			padding: 5px;
-			min-width: 295px;
-			border: 1px solid green;
-			display: inline-block;
-		}
-		.current {
-			background-color: yellow;
-		}
-		.completed {
-			background-color: green;
-		}
-		.excellent {
-			background-color: #40FF00;
-		}
-		.not-available {
-			background-color: silver;
-		}
-		.title {
-			margin: 12px 0px 4px 0px;
-			font-size: 26px;
-		}
-		.test-form {
-			border: 1px solid blue;
-		}
-		.questions {
-			border: 1px solid red;
-		}
-		.is-right {
-			font-weight: bold;
-			color: green;
-			text-decoration: line-through;
-		}
-		.is-wrong {
-			font-weight: bold;
-			color: red;
-		}
-		.answer {
-			color: silver;
-		}
-		.results {
-			background-color: white;
-		}
-		.total {
-			float: right;
-		}
-	</style>
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body ng-controller="TestingController as Test">
 	<h1 class="caption">{{test.caption}} <span style="font-size: 14px; color: silver;">from {{test.author}}</span></h1>
 	<div class="question-sections">
-		<!-- <h1>{{sortChaptsByLevel(test.chapters)}}</h1>-->
 		<div class="question-section" ng-controller="TestController as currTest" ng-class="{'current': true, 'completed': isCompleted(chapter.title) && hasMinimumStability(chapter.title), 'not-available': !chapter.available}" ng-repeat="chapter in test.chapters | orderChaptsBy:'level'">
 			<p class="title">
 				<a href="#">{{chapter.title}}</a>
@@ -72,60 +16,18 @@
 				<div class="control-panel" style="display: inline-block;" ng-show="chapter.available">
 					<a href="#" ng-hide="hasMinimumStability()" ng-click="beginTest(chapter.title)">Начать</a>
 					<a href="#" ng-show="hasBegun(chapter.title) && !isCompleted(chapter.title)" ng-click="continueTest(chapter.title)">Продолжить</a>
-					<a href="#" ng-show="isCompleted(chapter.title) && !hasMaxResult()" ng-click="testResult()">Результаты</a>
+					<a href="#" ng-show="isCompleted(chapter.title) && !hasMaxResult()" ng-click="testResult()">{{buttonResultsText}}</a>
 				</div>
 			</p>
-			<div class="results" ng-show="resultShowed">
-				<ol>
-					<li ng-repeat="(i, quest) in chapter.questions">
-						<span ng-class="{'question': true, 'is-right': checkAnswer(i), 'is-wrong': !checkAnswer(i)}">{{quest.title}}</span> <span class="answer" ng-show="!checkAnswer(i)">- "{{quest.answers[quest.answered].answer}}"</span>
-					</li>
-				</ol>
-			</div>
-			<div id="test-form" ng-show="hasBegun(chapter.title) && !isCompleted(chapter.title)" style="border: 1px solid green;">
-				<div class="current-question">
-					{{getQuestion(cqIdx).title}}
-					<ul ng-controller="AnswersController">
-						<li ng-repeat="(i, answer) in getQuestion(cqIdx).answers">
-							<input type="radio" name="answers" ng-click="setAnswer(chapter.title, cqIdx, i)"> {{answer.answer}}
-						</li>
-					</ul>
-				</div>
-				<button ng-click="applyAnswer()">Apply! Next>></button> <a href="#" ng-click="quitTest()">Quit</a>
-			</div>
-			<!--
-			<modal title="{{question.section}}" visible="showModal">
-				<h2 ng-model="currQuest">{{currQuest.question}}</h2>
-				<hr/>
-				<ul>
-					<li ng-repeat="answer in currQuest.answers" ng-switch="isArray(currQuest.rightAnswer)">
-						<input type="checkbox" ng-switch-when="{{true}}"/>{{answer}}
-						<input type="radio" ng-switch-when="{{false}}"/>{{answer}}
-						<input type="radio" ng-switch-default/>{{answer}}
-					</li>
-				</ul>
-			</modal>
-			-->
-			<!--
-			<div class="questions">
-				<ul>
-					<li>
-						//...
-					</li>
-				</ul>
-			</div>
-			-->
-			<!-- <span class="total">8/10</span>-->
+			<div class="custom-form" ng-show="resultShowed" ng-include="'js/templates/results.html'"></div>
+			<div class="custom-form" ng-show="hasBegun(chapter.title) && !isCompleted(chapter.title)" ng-include="'js/templates/test-form.html'" style="border: 1px solid green;"></div>
 		</div>
 	</div>
-	<!-- <button>Continue...</button>-->
 	<script type="text/javascript" src="js/libs/angular.min.js"></script>
 	<script type="text/javascript" src="js//libs/jquery.min.js"></script>
 	<script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
-	<!-- <script type="text/javascript" src="js/libs/ui-bootstrap.tpls.min.js"></script>-->
 	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript">
-		//alert(app);
-	</script>
+	<script type="text/javascript" src="js/filters.js"></script>
+	<script type="text/javascript" src="js/controllers.js"></script>
 </body>
 </html>
