--- a/TestingSystem/index.html
+++ b/TestingSystem/index.html
@@ -26,7 +26,7 @@
 	<script type="text/javascript" src="js/libs/angular.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.min.js"></script>
 	<script type="text/javascript" src="js/libs/ui-bootstrap.tpls.min.js"></script>
-	<script type="text/javascript" src="js/libs/angular-timer.min.js"></script>
+	<script type="text/javascript" src="js/libs/angular-animate.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
