Everything has been updated.

--- a/TestingSystem/index.html
+++ b/TestingSystem/index.html
@@ -5,10 +5,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style/bootstrap-theme.min.css">
-	<link rel="stylesheet" href="css/jquery-ui/jquery-ui.theme.min.css">
-	<link rel="stylesheet" href="css/jquery-ui/jquery-ui.structure.min.css">
-	<link rel="stylesheet" href="css/jquery-ui/jquery-ui.min.css">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/test-form.css">
 </head>
 <body ng-controller="TestingCtrl">
 	<h1 class="caption">&ldquo;{{quiz.caption}}&rdquo; <span style="font-size: 14px; color: silver;">from {{quiz.author}}&copy;</span></h1>
@@ -28,7 +26,6 @@
 	</div>
 	<script type="text/javascript" src="js/libs/angular.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.min.js"></script>
-	<script type="text/javascript" src="js/libs/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="js/libs/ui-bootstrap.tpls.min.js"></script>
 	<script type="text/javascript" src="js/libs/angular-animate.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
