--- a/TestingSystem/index.html
+++ b/TestingSystem/index.html
@@ -6,27 +6,15 @@
 	<link rel="stylesheet" href="css/style/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/login-form.css">
 	<link rel="stylesheet" href="css/test-form.css">
 </head>
-<body ng-controller="TestingCtrl">
-	<h1 class="caption">&ldquo;{{quiz.caption}}&rdquo; <span style="font-size: 14px; color: silver;">from {{quiz.author}}&copy;</span></h1>
-	<div class="question-sections">
-		<div class="question-section" ng-controller="ChapterCtrl" ng-click="chapter.available && !hasMaxResult(chapter.title) && beginTest(chapter.title)" ng-class="{'current': true, 'failed': isCompleted(chapter.title) && !hasMinimumStability(chapter.title), 'completed': isCompleted(chapter.title) && hasMinimumStability(chapter.title), 'excellent': isCompleted(chapter.title) && hasMaxResult(chapter.title), 'not-available': !chapter.available}" ng-repeat="chapter in quiz.chapters | orderChaptsBy:'level'">
-			<p class="title">
-				<h2 style="margin: 0; display: inline-block;">{{chapter.title}}</h2>
-				<h3 style="margin: 0; padding: 5px 6px 0px 0px; float: right; display: inline-block;">
-					<img style="height: 51px; vertical-align: center;" ng-show="chapter.available && hasMaxResult(chapter.title)" src="images/gold_medal.png"/>
-					<span ng-show="chapter.available && isCompleted(chapter.title) && !hasMaxResult(chapter.title)">{{getResult(chapter.title)}}/{{getQuestionCount(chapter.title)}}</span>
-				</h3>
-			</p>
-			<div class="control-panel" style="display: absolute;" ng-show="chapter.available">
-				<a href="#" ng-hide="hasMaxResult(chapter.title)" ng-click="beginTest(chapter.title); $event.stopPropagation();">Начать</a>
-			</div>
-		</div>
-	</div>
+<body>
+	<div ng-view></div>
 	<script type="text/javascript" src="js/libs/angular.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.min.js"></script>
 	<script type="text/javascript" src="js/libs/ui-bootstrap.tpls.min.js"></script>
+	<script type="text/javascript" src="js/libs/angular-route.min.js"></script>
 	<script type="text/javascript" src="js/libs/angular-animate.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
