--- a/TestingSystem/index.html
+++ b/TestingSystem/index.html
@@ -10,15 +10,36 @@
 	<link rel="stylesheet" href="css/test-form.css">
 </head>
 <body>
+	
 	<div ng-view></div>
+	
+	<!-- libs: -->
 	<script type="text/javascript" src="js/libs/angular.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.min.js"></script>
 	<script type="text/javascript" src="js/libs/ui-bootstrap.tpls.min.js"></script>
 	<script type="text/javascript" src="js/libs/angular-route.min.js"></script>
 	<script type="text/javascript" src="js/libs/angular-animate.min.js"></script>
+	
+	<!-- App instance: -->
 	<script type="text/javascript" src="js/app.js"></script>
+	
+	<!-- Services: -->
+	<script type="text/javascript" src="js/services/quiz.js"></script>
+	
+	<!-- Filters: -->
 	<script type="text/javascript" src="js/filters.js"></script>
-	<script type="text/javascript" src="js/controllers.js"></script>
+	
+	<!-- Directives: -->
 	<script type="text/javascript" src="js/directives.js"></script>
+	
+	<!-- Controllers: -->
+	<script type="text/javascript" src="js/controllers.js"></script>
+	
+	<script type="text/javascript" src="js/controllers/LoginCtrl.js"></script>
+	<script type="text/javascript" src="js/controllers/TestingCtrl.js"></script>
+	<script type="text/javascript" src="js/controllers/ChapterCtrl.js"></script>
+	<script type="text/javascript" src="js/controllers/TestCtrl.js"></script>
+	<script type="text/javascript" src="js/controllers/ResultCtrl.js"></script>
+	
 </body>
 </html>
